test/e2e/testdata/load_balancing_backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: lb-backend
  namespace: gateway-conformance-infra
spec:
  selector:
    app: lb-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lb-backend
  namespace: gateway-conformance-infra
  labels:
    app: lb-backend
spec:
  replicas: 4
  selector:
    matchLabels:
      app: lb-backend
  template:
    metadata:
      labels:
        app: lb-backend
    spec:
      containers:
        - name: backend
          image: gcr.io/k8s-staging-gateway-api/echo-basic:v20231214-v1.0.0-140-gf544a46e
          imagePullPolicy: IfNotPresent
          env:
            - name: POD_NAME
              valueFrom:
                fieldRef:
                  fieldPath: metadata.name
            - name: NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: SERVICE_NAME
              value: lb-backend
          resources:
            requests:
              cpu: 10m
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: EnvoyProxy
metadata:
  name: lb-backend-proxy-config
  namespace: gateway-conformance-infra
spec:
  ipFamily: IPv4
  logging:
    level:
      default: trace
  telemetry:
    accessLog:
      settings:
        - format:
            type: Text
            text: |
              [%START_TIME%] "%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% "%REQ(X-FORWARDED-FOR)%" "%REQ(USER-AGENT)%" "%REQ(:AUTHORITY)%" "%UPSTREAM_HOST%" "%REQ(X-REQUEST-ID)%"
          sinks:
            - type: File
              file:
                path: /dev/stdout
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: lb-backend-gateway
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: lb-backend-proxy-config
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: round-lb-backend
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: lb-backend-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: lb-backend
          port: 8080
